...
  final UserController _userController = Get.find();
  final ReportController _reportController = Get.find();
  @override
  Widget build(BuildContext context) {
    return Scaffold(
        appBar: AppBar(
          title: const Text('Welcome Back Coordinator!'),
          backgroundColor: Theme.of(context).colorScheme.primary,
          actions: <Widget>[
            IconButton(
              icon: const Icon(Icons.logout),
              onPressed: () {
                Navigator.pushNamed(context, '/');
...
            accountName: const Text('Navigation Menu'),
            accountEmail: null,
            currentAccountPicture: null,
          ),
          ListTile(
            leading: const Icon(Icons.person_add),
            title: const Text('Manage Clients'),
            onTap: () {
              Navigator.pushNamed(context, '/coordinator/clients');
            },
          ),
          ListTile(
            leading: const Icon(Icons.support_agent),
...
